[NAE-2445] - Import&Export of cases
- add default case export name property value
- add bean definition for CaseExporter and CaseImporter
- add missing constructor and getters to domain classes
- fix errors in CaseExporter and Case Importer
- add test net and fix test